# geojepa

./: .gitignore  LICENSE  README.md  install-intel-mac.sh  install.sh  requirements.txt
bolt/: create-task.py  submit_experiment.py
configs/: backbone-gen-emb.yaml  eval.yaml  train.yaml  transfer.yaml
configs/callbacks/: bolt.yaml  default.yaml  model_checkpoint.yaml  no_ckpt.yaml  save_last.yaml  stop_if_inf.yaml
configs/data/: bridge.yaml  building_count.yaml  car_bridge.yaml  max_speed.yaml  pretraining.yaml  task.yaml  traffic_signals.yaml
configs/debug/: anomaly.yaml  default.yaml  limit-only.yaml  profiler.yaml
configs/experiment/: 01-02-geojepa-gti.yaml  01-02-geojepa-t-large.yaml  01-02-geojepa-t.yaml  01-02-geojepa-ti.yaml  01-07-geojepa-gt.yaml  01-07-geojepa-gti.yaml  01-07-geojepa-t.yaml  01-07-geojepa-ti.yaml  train_geojepa.yaml  train_geojepa_geometry.yaml  train_geojepa_tune_img.yaml  train_tag_ae.yaml  train_tagformer_ae.yaml  train_tagformer_lmae.yaml  train_tagformer_mae.yaml  transfer_vision_models.yaml  vitb16_building_count.yaml
configs/hparams_search/: lr_opt.yaml  tagformer_lr_opt.yaml
configs/hydra/: default.yaml
configs/logger/: aim.yaml  many_loggers.yaml
configs/loss/: mae.yaml  mse.yaml  weighted_mse.yaml
configs/model/: blind.yaml  efficientnet.yaml  embedding_lookup.yaml  entity_tag_avg.yaml  geojepa.yaml  geojepa_probe.yaml  regression_transfer.yaml  resnet.yaml  scalemae.yaml  tag_ae.yaml  tag_ae_transfer.yaml  tagcountencoder.yaml  tagformer.yaml  tagformer_ae.yaml  tagformer_lmae.yaml  tagformer_mae.yaml  vitb16.yaml
configs/trainer/: cpu.yaml  ddp.yaml  ddp_sim.yaml  default.yaml  gpu.yaml  mps.yaml
data/: README.md  logfile.txt
data/osm_tile_extractor/: .gitignore  CMakeLists.txt  build_linux.sh  utils.h  (+5 more)
data/sat_tile_downloader/: .dockerignore  CMakeLists.txt  Dockerfile  build_linux.sh  download.py  indicators.hpp  main.cpp  requirements.txt  requirements2.txt  split.cpp  tile.sh  vcpkg.json
data/sat_tile_downloader/bolt/: create_task.py  requirements-iris.txt
data/sat_tile_downloader/bolt/tasks/tile_Atlanta/: config.yaml  run.sh  submit.sh
data/sat_tile_downloader/bolt/tasks/tile_Charlotte/: config.yaml  requirements.txt  run.sh
data/sat_tile_downloader/bolt/tasks/tile_LA/: config.yaml  run.sh  setup.sh
data/sat_tile_downloader/bolt/tasks/tile_SF/: config.yaml  run.sh
data/sat_tile_downloader/bolt/tasks/tile_Sacramento/: config.yaml  run.sh
data/sat_tile_downloader/bolt/tasks/tile_Washington/: config.yaml  run.sh
data/sat_tile_downloader/bolt/tasks/tile_test/: config.yaml  run.sh
data/sat_tile_downloader/builds/linux_x64/: merge_tiles  split_images
data/sat_tile_downloader/builds/macos_arm64/: merge_tiles  split_images
data/sat_tile_downloader/builds/macos_x64/: merge_tiles  split_images
data/task_generator/: .gitignore  CMakeLists.txt  README.md  ag_csv_generator.cpp  ag_csv_generator.h  ag_tag_pruner.cpp  ag_tag_pruner.h  build_linux.sh  co-occurrence.cpp  co-occurrence.h  features-key-val.csv  generator.cpp  generator.h  processed_tile_group.proto  unprocessed_tile_group.proto  utils.h  vcpkg.json
data/task_generator/builds/linux_x64/: ag_generator  cooccurrence  tag_pruner  task_generator
data/task_generator/builds/macos_arm64/: ag_generator  cooccurrence  tag_pruner  task_generator
data/task_generator/builds/macos_x64/: ag_generator  cooccurrence  tag_pruner  task_generator
data/task_generator/cooccurrence/: tag_counts.csv
data/task_generator/proto/: processed_tile_group.pb.cc  processed_tile_group.pb.h  processed_tile_group_pb2.py
data/task_generator/pruner_output/: pruned_ag0.csv  pruned_ag10.csv  pruned_ag20.csv  pruned_ag30.csv  pruned_ag40.csv  pruned_ag50.csv  pruned_ag60.csv  pruned_ag70.csv  pruned_ag80.csv  pruned_ag90.csv  tag_counts.csv  tag_counts_map.csv
data/tile_post_processor/: CMakeLists.txt  Dockerfile  README.md  build_linux.sh  indicators.hpp  main.cpp  plot_processed.py  plot_unprocessed.py  processed_tile_group.proto  utils.h  vcpkg.json
data/tile_post_processor/builds/common/: processed_tile_group.pb.cc  processed_tile_group.pb.h
data/tile_post_processor/builds/linux_x64/: tile_post_processor
data/tile_post_processor/builds/macos_arm64/: tile_post_processor
data/tile_post_processor/builds/macos_x64/: tile_post_processor
data/tile_post_processor/proto/: unprocessed_tile_group.pb.cc  unprocessed_tile_group.pb.h
notebooks/: encode_images.ipynb  geo_visualizer.ipynb  tag_geo_check.ipynb  tag_visualizer.ipynb
pyscripts/: README.md  ag_eval.py  ag_gen_data.py  ag_train.py  analyze_cooccurrence.py  build_h5_datasets.py  calc_image_mean_std.py  check_for_invalid_tiles.py  check_tag_embeddings_file.py  combine_datasets.py  compare_features.py  count_labels.py  dataloader_speed_test.py  dataloader_test.py  ema_eval.py  emb_lookup_speed_test.py  find_subtile.py  h5_interpolation.py  h5_knn.py  h5_knn_feat_html.py  h5_knn_html.py  h5_knn_interactive.py  h5_read.py  jepa_article_dates.txt  jepa_debugging.py  lr_plot.py  manual_transfer.py  merge_tiles.py  plot_article_summary.py  plot_bench_cluster.py  plot_feature_embs.py  plot_jepa_emb.py  plot_jepa_emb_2.py  plot_loss.py  plot_masks.py  plot_processed.py  plot_processed_graph.py  plot_results.py  plot_results_to_typst.py  plot_tile_batch.py  (+18 more)
scripts/: 01-02-jepa-test.sh  01-03-train-vitb16.sh  01-04-t-eval.sh  01-05-eval-all.sh  01-06-gen-image-models.sh  01-06-train-tagformer.sh  01-11-train-tagformer-ae.sh  01-12-tag-avg-knn.sh  12-30-gen-jepa-emb.sh  README.md  ensure-conda.sh  eval-masked.sh  gen-embs.sh  gen-feat-knn.sh  gen-knn.sh  gen-tagformer-emb.sh  git-add-results.sh  reset-git.sh  run-data-pipeline.sh  run-full-pipeline.sh  save-important-embs.sh  train-12-27-jepa.sh  train-12-27-tagae.sh  train-12-30-jepa-gti.sh  train-12-30-jepa.sh  train-ag-test.sh  train-ag.sh  train-custom.sh
src/: __init__.py  backbone-gen-emb.py  check_config.py  eval.py  train.py  transfer.py
tests/: test_dataloader.py  test_loss.py  test_masks.py  test_tag_encoder.py  test_tag_indexer.py  test_tileutils.py
(+123 files in other folders)
